// Copy this text, paste to https://dbdiagram.io/d
// Or, https://databasediagram.com/app
// Or, view in VSCode with extension: "DBML Live Preview"

Project DBML {
  Note: '''
Airplane: Represents an airplane entity.
Airport: Represents an airport entity.
Luggage: Represents luggage linked to a passenger.
Passenger: Represents a passenger entity with a link to airplane.
'''
}

Table Airplane {
    id INTEGER [primary key]
    model VARCHAR 
    seating_capacity INTEGER 
    passenger_count INTEGER 
    }

Table Airport {
    id INTEGER [primary key]
    name VARCHAR 
    code VARCHAR 
    city VARCHAR 
    country VARCHAR 
    latitude DECIMAL 
    longitude DECIMAL 
    }

Table Luggage {
    id INTEGER [primary key]
    passenger_id INTEGER 
    weight DECIMAL 
    }

Table Passenger {
    id INTEGER [primary key]
    name VARCHAR 
    email VARCHAR 
    luggage_weight_total DECIMAL 
    airplane_id INTEGER 
    }



// Relationships
    Ref: Luggage.(passenger_id) < Passenger.(id)
    Ref: Passenger.(airplane_id) < Airplane.(id)
